@@ -1,7 +1,5 @@
 include $(top_srcdir)/Makefile.tool.am
 
-SUBDIRS += perf
-
 EXTRA_DIST = \
 	docs/ms-manual.xml \
 	docs/ms_print-manpage.xml
