@@ -1,11 +1,0 @@
-
-include $(top_srcdir)/Makefile.tool-tests.am
-
-EXTRA_DIST = \
-	many-loss-records.vgperf
-
-check_PROGRAMS = \
-	many-loss-records
-
-AM_CFLAGS   += -O $(AM_FLAG_M3264_PRI)
-AM_CXXFLAGS += -O $(AM_FLAG_M3264_PRI)
